CTS_v0.9.3
   -fixed ImageComparator handling of transparency
   
CTS_v0.9.2
   -Updated test framework so that not passing a blessed image comparison does not fail the test.  Changed the log message from FAILED to WARNING if a test does not pass the blessed image comparison.
   -library_geometries\geometry\mesh\triangles\one_geometry_one_triangles: Updated judging script to allow transformation between triangles and polygons/polylist on export.
   -library_visual_scenes\visual_scene\node\id\id_dash, id_period, id_underscore: Updated judging script to check node and child nodes for preservation of id. Previously only checked the node specified by the tag list.
   -library_visual_scenes\visual_scene\node\instance_geometry\bind_material\instance_material\bind_vertex_input\cube_texture_set: Updated judging script to compare image against correct reference test.
   -library_visual_scenes\visual_scene\node\lookat\node_lookat: Updated judging script to compare image against correct reference test.
   -xml\id\id_with_dash, id_with_period, id_with_underscore: Added missing judging script to subversion repository.     - fixed some tests
   
CTS_v0.9.1  
    - added templates to Documentation directory
    - updated Documentation/SubmittingResults.doc for latest procedure
    
CTS_v0.9.0 (January 10, 2010)
    - initial release
    